# hyperlight-sandbox

./: .gitignore  Cargo.toml  GOVERNANCE.md  Justfile  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.copilot/skills/justfile-ci/: SKILL.md
.copilot/skills/justfile-ci/references/: architecture.md
.github/: copilot-instructions.md  dependabot.yml
.github/hooks/: hooks.json  run-just-post-session.sh
.github/workflows/: ci.yml  publish.yml
docs/: dotnet-sdk-plan.md  end-user-overview-slides.md
examples/: Justfile
examples/agent-framework/: DotnetAgent.cs  DotnetAgent.csproj  README.md  copilot_agent.py
examples/copilot-sdk/: DotnetCopilotSdk.cs  DotnetCopilotSdk.csproj  README.md  copilot_sdk_tools.py
scripts/: update-actions.sh
src/hyperlight_sandbox/: Cargo.toml
src/hyperlight_sandbox/src/: cap_fs.rs  http.rs  lib.rs  network.rs  runtime.rs  test_utils.rs  tools.rs
src/hyperlight_sandbox/tests/: http_integration.rs
src/javascript_sandbox/: Cargo.toml  Justfile
src/javascript_sandbox/examples/: basics.rs  filesystem_demo.rs  network_demo.rs
src/javascript_sandbox/src/: lib.rs
src/nanvix_sandbox/: Cargo.toml  Justfile
src/nanvix_sandbox/examples/: hello.rs
src/nanvix_sandbox/src/: lib.rs
src/sdk/dotnet/: .editorconfig  .gitattributes  Directory.Build.props  Justfile  README.md
src/sdk/dotnet/core/: HyperlightSandbox.sln
src/sdk/dotnet/core/Api/: ExecutionResult.cs  HyperlightSandbox.Api.csproj  Sandbox.cs  SandboxBackend.cs  SandboxBuilder.cs  SandboxSnapshot.cs  SizeParser.cs  ToolSchemaBuilder.cs
src/sdk/dotnet/core/Examples/BasicExample/: Program.cs
src/sdk/dotnet/core/Examples/Common/: Common.csproj  ExampleHelper.cs
src/sdk/dotnet/core/Examples/FilesystemExample/: Program.cs
src/sdk/dotnet/core/Examples/NetworkExample/: NetworkExample.csproj  Program.cs
src/sdk/dotnet/core/Examples/SnapshotExample/: Program.cs
src/sdk/dotnet/core/Examples/ToolRegistrationExample/: Program.cs
src/sdk/dotnet/core/Extensions.AI/: CodeExecutionTool.cs  HyperlightSandbox.Extensions.AI.csproj
src/sdk/dotnet/core/PInvoke/: AssemblyInfo.cs  Exceptions.cs  FFIErrorCode.cs  FFIResult.cs  HyperlightSandbox.PInvoke.csproj  SafeHandles.cs  SafeNativeMethods.cs  SandboxOptions.cs  ToolCallbackDelegate.cs
src/sdk/dotnet/core/Tests/HyperlightSandbox.PackageTests/: HyperlightSandbox.PackageTests.csproj  PackageInstallationTests.cs  nuget.config
src/sdk/dotnet/core/Tests/HyperlightSandbox.Tests/: CodeExecutionToolTests.cs  HyperlightSandbox.Tests.csproj  IntegrationTests.cs  JavaScriptBackendTests.cs  OwnershipTransferTests.cs  PInvokeLayerTests.cs  SandboxBuilderTests.cs  SandboxLifecycleTests.cs  SizeParserTests.cs  ToolRegistrationTests.cs
src/sdk/dotnet/ffi/: Cargo.toml
src/sdk/dotnet/ffi/.cargo/: config.toml
src/sdk/dotnet/ffi/src/: lib.rs
src/sdk/python/: Justfile
src/sdk/python/core/: README.md  pyproject.toml
src/sdk/python/core/examples/: benchmark.py  javascript_basics.py  javascript_filesystem_demo.py  javascript_network_demo.py  jswasm_basics.py  jswasm_filesystem_demo.py  jswasm_network_demo.py  python_basics.py  python_filesystem_demo.py  python_network_demo.py
src/sdk/python/core/hyperlight_sandbox/: __init__.py  _module_resolver.py
src/sdk/python/core/tests/: fuzz_tool_dispatch.py  test_tool_validation.py
src/sdk/python/hyperlight_js_backend/: Cargo.toml  README.md  pyproject.toml
src/sdk/python/hyperlight_js_backend/hyperlight_sandbox_backend_hyperlight_js/: __init__.py
src/sdk/python/hyperlight_js_backend/src/: lib.rs
src/sdk/python/pyo3_common/: Cargo.toml
src/sdk/python/pyo3_common/src/: lib.rs
src/sdk/python/tests/: wheelhouse_js.py  wheelhouse_wasm.py  wheelhouse_wasm_js.py  wheelhouse_wasm_python.py
src/sdk/python/wasm_backend/: Cargo.toml  README.md  pyproject.toml
src/sdk/python/wasm_backend/.cargo/: config.toml
src/sdk/python/wasm_backend/hyperlight_sandbox_backend_wasm/: __init__.py
src/sdk/python/wasm_backend/src/: lib.rs
src/sdk/python/wasm_guests/javascript_guest/: README.md  pyproject.toml
src/sdk/python/wasm_guests/javascript_guest/javascript_guest/: __init__.py  path.py
src/sdk/python/wasm_guests/python_guest/: README.md  pyproject.toml
src/sdk/python/wasm_guests/python_guest/python_guest/: __init__.py  path.py
src/wasm_sandbox/: Cargo.toml  Justfile
src/wasm_sandbox/examples/: js_basics.rs  js_filesystem_demo.rs  js_network_demo.rs  python_basics.rs  python_filesystem_demo.rs  python_network_demo.rs
src/wasm_sandbox/guests/javascript/: build.js  package-lock.json  package.json  sandbox_executor.js
src/wasm_sandbox/guests/python/: sandbox_executor.py
src/wasm_sandbox/src/: lib.rs
src/wasm_sandbox/src/wasi_impl/: body_stream.rs  cli.rs  clocks.rs  filesystem.rs  http.rs  http_handler.rs  io.rs  mod.rs  random.rs  resource.rs  sockets.rs
src/wasm_sandbox/src/wasi_impl/types/: buffer.rs  headers.rs  http_future_headers.rs  http_future_incoming_response.rs  http_incoming_body.rs  http_incoming_request.rs  http_incoming_response.rs  http_outgoing_body.rs  http_outgoing_request.rs  http_outgoing_response.rs  http_request_options.rs  http_response_outparam.rs  mod.rs  pollable.rs  stream.rs
src/wasm_sandbox/tests/: http_wasm_integration.rs
src/wasm_sandbox/wit/: hyperlight-sandbox.wit
