[workspace]
members = [
	"src/hyperlight_sandbox",
	"src/javascript_sandbox",
	"src/wasm_sandbox",
	"src/sdk/python/pyo3_common",
	"src/sdk/python/wasm_backend",
	"src/sdk/python/hyperlight_js_backend",
]
# nanvix_sandbox requires nightly Rust (nanvix uses #![feature(never_type)])
exclude = [
	"src/nanvix_sandbox",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"

[workspace.dependencies]
hyperlight-sandbox = { path = "src/hyperlight_sandbox" }
hyperlight-javascript-sandbox = { path = "src/javascript_sandbox" }
hyperlight-wasm-sandbox = { path = "src/wasm_sandbox" }
hyperlight-sandbox-pyo3-common = { path = "src/sdk/python/pyo3_common" }
hyperlight-common = { version = "0.14.0", default-features = false }
hyperlight-component-macro = { version = "0.14.0" }
hyperlight-host = { version = "0.14.0", default-features = false, features = ["executable_heap"] }
hyperlight-wasm = { git = "https://github.com/jsturtevant/hyperlight-wasm", rev = "05a9eea" } #branch util-compont-fixes
pyo3 = { version = "0.28", features = ["extension-module"] }

# Patched component-util (name collision fix, flags fix, empty-ns fix)
# https://github.com/jsturtevant/hyperlight-1/tree/wasm-component-fixes
[patch."https://github.com/hyperlight-dev/hyperlight"]
hyperlight-common = { version = "0.14.0" }
hyperlight-guest = { version = "=0.14.0" }
hyperlight-guest-bin = { version = "=0.14.0" }
hyperlight-host = { version = "0.14.0" }
hyperlight-component-util = { git = "https://github.com/jsturtevant/hyperlight-1", rev="4701257034306b0978d49cc9140bc0b12de3b409",  package = "hyperlight-component-util" }

[patch.crates-io]
hyperlight-component-util = { git = "https://github.com/jsturtevant/hyperlight-1", rev="4701257034306b0978d49cc9140bc0b12de3b409", package = "hyperlight-component-util" }
