[workspace]
members = [
	"src/hyperlight_sandbox",
	"src/javascript_sandbox",
	"src/wasm_sandbox",
	"src/sdk/python/pyo3_common",
	"src/sdk/python/wasm_backend",
	"src/sdk/python/hyperlight_js_backend",
	"src/sdk/dotnet/ffi",
]
# nanvix_sandbox requires nightly Rust (nanvix uses #![feature(never_type)])
exclude = [
	"src/nanvix_sandbox",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"

[workspace.dependencies]
hyperlight-sandbox = { path = "src/hyperlight_sandbox" }
hyperlight-javascript-sandbox = { path = "src/javascript_sandbox" }
hyperlight-wasm-sandbox = { path = "src/wasm_sandbox" }
hyperlight-sandbox-pyo3-common = { path = "src/sdk/python/pyo3_common" }
hyperlight-common = { version = "0.14.0", default-features = false }
hyperlight-component-macro = { version = "0.14.0" }
hyperlight-host = { version = "0.14.0", default-features = false, features = ["executable_heap"] }
hyperlight-wasm = { git = "https://github.com/jsturtevant/hyperlight-wasm", rev = "13906096edc2e014220c11a040242070ce6dee90" } #branch util-compont-fixes
pyo3 = { version = "0.28", features = ["extension-module"] }

# hyperlight-wasm 0.13.1 (git) depends on hyperlight-* from the hyperlight-dev
# GitHub org. Redirect those to the published 0.14.0 crates.io versions.
[patch."https://github.com/hyperlight-dev/hyperlight"]
hyperlight-common = { version = "0.14.0" }
hyperlight-guest = { version = "=0.14.0" }
hyperlight-guest-bin = { version = "=0.14.0" }
hyperlight-host = { version = "0.14.0" }
hyperlight-component-util = { git = "https://github.com/jsturtevant/hyperlight-1", rev="cdbed80af127b4d74e2633511cadb07bfea0160e",  package = "hyperlight-component-util" }

[patch.crates-io]
hyperlight-component-util = { git = "https://github.com/jsturtevant/hyperlight-1", rev="cdbed80af127b4d74e2633511cadb07bfea0160e", package = "hyperlight-component-util" }
