[project]
name = "hyperlight-sandbox-dev"
version = "0.0.0"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "src/sdk/python/core",
    "src/sdk/python/wasm_backend",
    "src/sdk/python/hyperlight_js_backend",
    "src/sdk/python/wasm_guests/python_guest",
    "src/sdk/python/wasm_guests/javascript_guest",
]

[tool.uv.sources]
hyperlight-sandbox = { workspace = true }
hyperlight-sandbox-backend-wasm = { workspace = true }
hyperlight-sandbox-backend-hyperlight-js = { workspace = true }
hyperlight-sandbox-python-guest = { workspace = true }
hyperlight-sandbox-javascript-guest = { workspace = true }

[dependency-groups]
dev = [
    "maturin>=1.7,<2.0",
    "componentize-py",
    "build",
    "twine",
    "ruff>=0.15",
    "hyperlight-sandbox",
    "hyperlight-sandbox-python-guest",
    "hyperlight-sandbox-javascript-guest",
]
copilot-sdk = [
    "github-copilot-sdk",
    "pydantic",
    "hyperlight-sandbox",
    "hyperlight-sandbox-backend-wasm",
    "hyperlight-sandbox-python-guest",
]
agent-framework = [
    "agent-framework-github-copilot>=0.0.0a0",
    "pydantic",
    "hyperlight-sandbox",
    "hyperlight-sandbox-backend-wasm",
    "hyperlight-sandbox-python-guest",
]
agent-framework-devui = [
    "agent-framework-devui>=0.0.0a0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src/sdk/python", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
