[package]
name = "hyperlight-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-level Rust host library for running sandbox guests across multiple backends."

[dependencies]
anyhow = "1"
bitflags = "2"
bytes = "1"
cap-std = "4.0.2"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
url = "2"
wasmtime-wasi-http = "43.0.0"

[dev-dependencies]
futures-util = "0.3"
http-body = "1"
proptest = "1"
tokio = { version = "1", features = ["full"] }

[features]
test-utils = []
