[package]
name = "hyperlight-wasm-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wasm component sandbox backend for hyperlight-sandbox (Python, JavaScript, etc.)"

[dependencies]
hyperlight-sandbox.workspace = true
hyperlight-wasm.workspace = true
hyperlight-host.workspace = true
hyperlight-common.workspace = true
hyperlight-component-macro.workspace = true
anyhow = "1"
bytes = "1"
getrandom = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
log = "0.4"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
hyperlight-sandbox = { workspace = true, features = ["test-utils"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
