[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperlight-sandbox"
version = "0.1.0"
description = "Python API for running code in isolated Hyperlight sandboxes with swappable backends"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []
optional-dependencies = { wasm = ["hyperlight-sandbox-backend-wasm>=0.1.0"], hyperlight_js = ["hyperlight-sandbox-backend-hyperlight-js>=0.1.0"], python_guest = ["hyperlight-sandbox-python-guest>=0.1.0"], javascript_guest = ["hyperlight-sandbox-javascript-guest>=0.1.0"], dev = ["atheris>=2.3.0"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]
keywords = ["hyperlight", "wasm", "sandbox", "isolation", "code-execution"]

[project.urls]
Repository = "https://github.com/hyperlight-dev/hyperlight-wasm"

[tool.setuptools]
packages = ["hyperlight_sandbox"]

[tool.setuptools.package-data]
hyperlight_sandbox = ["py.typed"]
