[package]
name = "hyperlight-sandbox-backend-hyperlight-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HyperlightJS backend bindings for hyperlight-sandbox"

[lib]
name = "_native_js"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
hyperlight-sandbox.workspace = true
hyperlight-javascript-sandbox.workspace = true
hyperlight-sandbox-pyo3-common.workspace = true