[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hyperlight-sandbox-backend-hyperlight-js"
version = "0.1.0"
description = "HyperlightJS backend implementation for hyperlight-sandbox"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
module-name = "hyperlight_sandbox_backend_hyperlight_js._native_js"