[package]
name = "hyperlight-sandbox-pyo3-common"
version = "0.1.0"
edition = "2024"
description = "Shared PyO3 helpers for hyperlight-sandbox backend crates"
license = "Apache-2.0"

[workspace]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
hyperlight-sandbox = { path = "../../../hyperlight_sandbox" }
anyhow = "1"
serde_json = "1"
log = "0.4"
