[package]
name = "hyperlight-sandbox-pyo3-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared PyO3 helpers for hyperlight-sandbox backend crates"

[dependencies]
pyo3.workspace = true
hyperlight-sandbox.workspace = true
anyhow = "1"
serde_json = "1"
log = "0.4"
