[package]
name = "hyperlight-sandbox-backend-wasm"
version = "0.1.0"
edition = "2024"
description = "Wasm backend bindings for hyperlight-sandbox"
license = "Apache-2.0"

[lib]
name = "_native_wasm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
hyperlight-sandbox = { path = "../../../hyperlight_sandbox" }
hyperlight-wasm-sandbox = { path = "../../../wasm_sandbox" }
hyperlight-sandbox-pyo3-common = { path = "../pyo3_common" }