[package]
name = "hyperlight-sandbox-backend-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Wasm backend bindings for hyperlight-sandbox"

[lib]
name = "_native_wasm"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
hyperlight-sandbox.workspace = true
hyperlight-wasm-sandbox.workspace = true
hyperlight-sandbox-pyo3-common.workspace = true