[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hyperlight-sandbox-backend-wasm"
version = "0.1.0"
description = "Wasm backend implementation for hyperlight-sandbox"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
python-source = "."
features = ["pyo3/extension-module"]
module-name = "hyperlight_sandbox_backend_wasm._native"