[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperlight-sandbox-javascript-guest"
version = "0.3.0"
description = "Packaged Hyperlight Wasm JavaScript guest exposed as javascript_guest.path"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["javascript_guest", "javascript_guest.resources"]

[tool.setuptools.package-data]
javascript_guest = ["resources/*.aot", "resources/*.wasm"]